finaernigon on the allakfn kardo

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# .env (project root me)
-REACT_APP_TELEGRAM=https://t.me/yourchannel
-REACT_APP_WHATSAPP=https://whatsapp.com/channel/0029Va4xxxxx
-REACT_APP_INSTAGRAM=https://instagram.com/yourprofile
-REACT_APP_FACEBOOK=https://facebook.com/yourpage
+VITE_TELEGRAM=https://t.me/vikashhhhd
+VITE_WHATSAPP=https://chat.whatsapp.com/xyz
+VITE_INSTAGRAM=https://instagram.com/yourname
+VITE_FACEBOOK=https://facebook.com/yourpage
